# adfmaker

./: Cargo.toml  README.md  template.csv
.github/workflows/: build.yml
src/: allocator.rs  amigaostypes.rs  common.rs  directories.rs  disk.rs  filelist.rs  files.rs  filesystem.rs  main.rs
